<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment_search_videos.SearchVideosFragment">

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/title_search_video"
        style="@style/TextStyle_Helper_Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/marginx2"
        android:layout_marginStart="@dimen/marginx2"
        android:layout_marginTop="@dimen/marginx2"/>

    <TextView
        android:id="@+id/tv_search_videos_title2"
        android:visibility="gone"
        android:text="@string/title_choose_brand"
        style="@style/TextStyle_Helper_Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginLeft="@dimen/marginx2"
        android:layout_marginStart="@dimen/marginx2"
        android:layout_marginTop="@dimen/margin"/>

    <Button
        android:id="@+id/btn_back_screen"
        android:visibility="gone"
        android:text="@string/btn_title_back"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_search_videos_title2"
        android:layout_marginRight="@dimen/marginx2"
        app:layout_goneMarginBottom="0dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_search_videos_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_videos_title2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin"
        app:layout_goneMarginTop="@dimen/margin"
        android:layout_marginBottom="1dp"/>

</android.support.constraint.ConstraintLayout>